# rpg2

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Makefile  build.py  conanbuildinfo.cmake  conanfile.txt  test.py
cmake/: FindTMXLITE.cmake  staticanalysis.cmake
docs/: TriggerIdeas
scripts/: add_headers.py
src/: CMakeLists.txt  Makefile  main.cpp
src/action/: BaseAction.hpp  CMakeLists.txt  GoToTileAction.cpp  GoToTileAction.hpp
src/assets/: atlas.tsx  test.tmx  test2.tmx  tiles.tmx
src/trigger/: TriggerManager.hpp
src/ui/: CMakeLists.txt  Makefile  window.cpp  window.hpp
src/util/: direction.hpp  global.hpp  moving.hpp  rectangle.hpp  tile_tween.hpp  update.hpp
src/world/: CMakeLists.txt  Makefile  layer.hpp  layer_state.cpp  layer_state.hpp  map_manager.cpp  map_manager.hpp  rectangle.hpp  tile.cpp  tile.hpp  tilemap.cpp  tilemap.hpp
src/world/ecs/: CMakeLists.txt  Makefile  component.hpp  component_animation.cpp  component_animation.hpp  component_graphics.cpp  component_graphics.hpp  component_input.hpp  component_input_player.cpp  component_input_player.hpp  component_message.hpp  component_physics.cpp  component_physics.hpp  entity.cpp  entity.hpp
src/world/tilemap/: BaseTile.hpp  BaseTilemap.hpp  CMakeLists.txt  Layer.cpp  Layer.hpp  README.md  RenderLayer.cpp  RenderLayer.hpp  Tile.cpp  Tile.hpp  Tilemap.cpp  Tilemap.hpp  tile.cpp  tile.hpp  tilemap.cpp  tilemap.hpp
tests/: CMakeLists.txt  Makefile
tests/action/: CMakeLists.txt  test_action.cpp
tests/ui/: CMakeLists.txt  Makefile  test_window.cpp
tests/world/: CMakeLists.txt  Makefile  test_entity.cpp  test_map_manager.cpp  test_tile.cpp  test_tilemap.cpp
